Création du modèle pour la table composants
-Création de la classe componenttablemodel
-Ajout dans mainwindow d'un code pour le tester
-ajout de la fonction d'ouverture de base de de donnée

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ qt_add_executable(GenericDCL WIN32 MACOSX_BUNDLE
     sqltableform.cpp sqltableform.h sqltableform.ui
     tableviewmanager.cpp tableviewmanager.h
     qressources.qrc
+    componenttablemodel.h componenttablemodel.cpp
 )
 
 target_compile_definitions(GenericDCL PRIVATE
