Creation d'une factory pour les modèles
- TableModelFactory ajouté pour gérer facilement les modèles et vues
associées
- Modification de MainWindow pour utiliser la factory
- Modification d'un bug d'initialisation des valeurs calculés du modèle
ComponentTableModel lors du Select().

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ qt_add_executable(GenericDCL WIN32 MACOSX_BUNDLE
     tableviewmanager.cpp tableviewmanager.h
     qressources.qrc
     componenttablemodel.h componenttablemodel.cpp
+    tablemodelfactory.h tablemodelfactory.cpp
 )
 
 target_compile_definitions(GenericDCL PRIVATE
