Mise en place de la vue Composant
-Création de la vue avec filtre
-Création d'une vue custom pour envoyer un signal quand on fait setModel
-Gestion des header pour qu'ils soient identiques sur la table de filtre

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,9 @@ qt_add_executable(GenericDCL WIN32 MACOSX_BUNDLE
     datedelegate.h datedelegate.cpp
     foreignkeydelegate.h foreignkeydelegate.cpp
     ouinondelegate.h ouinondelegate.cpp
+    filtertableview.h filtertableview.cpp filtertableview.ui
+    customtableview.h customtableview.cpp
+
 )
 
 target_compile_definitions(GenericDCL PRIVATE
