--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ qt_add_executable(GenericDCL WIN32 MACOSX_BUNDLE
     filtertableview.h filtertableview.cpp filtertableview.ui
     customtableview.h customtableview.cpp
     componentproxymodel.h componentproxymodel.cpp
+    proxydelegate.h proxydelegate.cpp
 
 )
 
