Correction sur les proxies:
- Ajout d'un classe CustomSortFilterProxyModel dont tous les proxies du
projet héritent.
- Correction de la fonction MainWindow::on_actionLoad_DCL_triggered()
pour utiliser les bons pointeurs de proxies.
- Marquage d'une erreur à corriger dans la classe FilterTableView.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ qt_add_executable(GenericDCL WIN32 MACOSX_BUNDLE
     componentproxymodel.h componentproxymodel.cpp
     proxydelegate.h proxydelegate.cpp
     customrelationalmodel.h customrelationalmodel.cpp
+    customsortfilterproxymodel.h customsortfilterproxymodel.cpp
 
 )
 
